# Lights-Out-Christmas

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  Lights Out Christmas Concept Document.docx  Lights Out Christmas Concept Document.txt  README.md  build.bat  build.sh  error.txt  launch.sh  unittest.sh  vcpkg.json
assets/: asset_data.json  lights_out_christmas_sprites_v3.jsx
memory/: feedback_build_order.md
planning/: prompt_recipe.md  sprite_asset_list.txt  v1-atari-prompts.md
src/: main.cpp
src/core/: AudioManager.cpp  AudioManager.h  ChiptunePlayer.cpp  ChiptunePlayer.h  Constants.h  DevConsole.cpp  DevConsole.h  Game.cpp  Game.h  HouseAssetLoader.cpp  HouseAssetLoader.h  InputManager.cpp  InputManager.h  PlatformData.cpp  PlatformData.h  ResourceManager.cpp  ResourceManager.h  SpriteRegistry.cpp  SpriteRegistry.h  Types.h
src/gameplay/: BushTree.cpp  BushTree.h  Collision.cpp  Collision.h  DarknessManager.cpp  DarknessManager.h  Entity.cpp  Entity.h  GameWorld.cpp  GameWorld.h  House.cpp  House.h  Lane.cpp  Lane.h  LightString.cpp  LightString.h  Player.cpp  Player.h  ScoreSystem.cpp  ScoreSystem.h  TreeEntity.cpp  TreeEntity.h
src/gameplay/powerups/: AcornStash.cpp  AcornStash.h  DecoyNut.cpp  DecoyNut.h  DoubleTail.cpp  DoubleTail.h  FrenzyMode.cpp  FrenzyMode.h  IcePatch.cpp  IcePatch.h  PowerUp.cpp  PowerUp.h  ShadowMode.cpp  ShadowMode.h  SuperChomp.cpp  SuperChomp.h  WinterCoat.cpp  WinterCoat.h
src/gameplay/threats/: Cat.cpp  Cat.h  Dog.cpp  Dog.h  Homeowner.cpp  Homeowner.h  NeighborhoodWatch.cpp  NeighborhoodWatch.h  Owl.cpp  Owl.h  Threat.cpp  Threat.h
src/rendering/: Particles.cpp  Particles.h  Renderer.cpp  Renderer.h
src/steam/: SteamIntegration.cpp  SteamIntegration.h
src/ui/: ControlsScreen.cpp  ControlsScreen.h  GameOverScreen.cpp  GameOverScreen.h  GameScreen.cpp  GameScreen.h  MainMenu.cpp  MainMenu.h  PauseMenu.cpp  PauseMenu.h  TownSquareBossScreen.cpp  TownSquareBossScreen.h  UpgradeScreen.cpp  UpgradeScreen.h  YouWinScreen.cpp  YouWinScreen.h
tests/: CMakeLists.txt  test_bush_tree.cpp  test_collision.cpp  test_darkness_manager.cpp  test_house.cpp  test_lane_system.cpp  test_light_string.cpp  test_power_ups.cpp  test_score_system.cpp  test_threats.cpp
tools/: export_sprites.py  extract_sprites.js  sprites_data.json
